# strava-trail-analyze

./: .gitignore  Dockerfile  Dockerfile.app  Makefile  README.md  analyze.py  app.py  lut_merged.npy  make.sh  requirements.txt  trail.ipynb  trailanalysis.ipynb
app/: setup.cfg  setup.py
app/templates/: activities.html  auth.html  index.html  layout.html  routes.html  sample_solid.html
app/trailsapp/: __init__.py  analyze.py  solid.py
chart/: values.yaml
chart/templates/: NOTES.txt  deployment.yaml  hpa.yaml  prod_issuer.yaml  service.yaml  serviceaccount.yaml  staging_issuer.yaml
chart/templates/tests/: test-connection.yaml
templates/: activities.html  auth.html  index.html  layout.html  routes.html
trails/: Chart.yaml
trails/templates/: _helpers.tpl  deployment.yaml  ingress.yaml
trailsapp/: __init__.py  analyze.py
trailsapp/templates/: activities.html  auth.html  routes.html
