[bumpversion]
current_version = 0.1.0

[bumpversion:file:VERSION]

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = trails-app
license = GPL-2+
license_file = COPYING
author = Volodymyr Savchenko
author_email = contact@volodymyrsavchenko.com
url = https://odahub.io
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: POSIX
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Internet
	Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires = 
	lxml
	six
	coloredlogs
tests_require = 
	pytest

[options.package_data]
oda_evaluate.tests.data = *.xml

